refact: rename error_message to message return
